This branch is for creating a method that checks the dimensions of all of the methods for class Agent.

--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -1243,12 +1243,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def test_function(a):\n",
+    "    '''\n",
+    "    Need to test the dimensions of the inputs, and also the dimensions of the outputs.\n",
+    "    '''\n",
+    "    assert np.shape(a)==(1,)\n",
+    "    return np.concatenate([a,a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_function(np.array([3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "How should we implement this?\n",
+    "1) write a single method called \"test_dimensions\"\n",
+    "2) it will test each of the methods that we know appear in all of the \n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
